Updated README.md to explain how to run examples - plus added all JavaFX dependencies to pom.xml